// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScriptAttr(Timeout) should not to override script timeout by default: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
-/******/ 	  return {};
+/******/ 	  mode = mode || 'load';
+/******/
+/******/ 	  var result = {};
+/******/
+/******/ 	  (function() {
+/******/ 	    result.timeout = 120;
+/******/ 	  })();
+/******/
+/******/ 	  return result;
"
`;

exports[`ScriptAttr(Timeout) should override script timeout from config: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
-/******/ 	  return {};
+/******/ 	  mode = mode || 'load';
+/******/
+/******/ 	  var result = {};
+/******/
+/******/ 	  (function() {
+/******/ 	    result.timeout = 60;
+/******/ 	  })();
+/******/
+/******/ 	  return result;
"
`;

exports[`ScriptAttr(Timeout) should override script timeout from options: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
-/******/ 	  return {};
+/******/ 	  mode = mode || 'load';
+/******/
+/******/ 	  var result = {};
+/******/
+/******/ 	  (function() {
+/******/ 	    result.timeout = 50;
+/******/ 	  })();
+/******/
+/******/ 	  return result;
"
`;
